--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html>
   <head>
     <title>My Website</title>
+    <style>
+      body {
+        background-image: url("lawn.png");
+        background-size: cover;
+      }
+    </style>
   </head>
   <body>
-    <img src="lawn.png" width="100%">
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSccSmfzE4kwTazNq6dOc5m04_0t64ywTdCMUqseC6J1OOgRvw/viewform?embedded=true" width="640" height="1578" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
   </body>
 </html>
