--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
         background-image: url("lawn.png");
         background-size: cover;
       }
+        iframe {
+    width: 100%;
+    height: 100vh;
+    border: none;
+  }
+
+  @media only screen and (max-width: 768px) {
+    body {
+      background-size: contain;
+    }
+
+    iframe {
+      height: 2000px;
+    }
+  }
     </style>
   </head>
   <body>
